# databricks-fintech-lakehouse

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data_generator/: generate_accounts.py  generate_customers.py  generate_fx_rates.py  generate_transactions.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: transaction_rules.sql
dbt/models/: sources.yml
dbt/tests/: assert_unique_silver_fx_rates.sql
docs/: databricks_workflow_job.json
notebooks/: 00_setup_catalogs.py  00_setup_catalogs_runner.py  01_bronze_ingestion.py  01_bronze_ingestion_runner.py  02_silver_entities.py  02_silver_entities_runner.py  03_silver_transactions.py  03_silver_transactions_runner.py  04_gold_dimensions_facts.py  04_gold_fact_runner.py  05_gold_marts.py  05_gold_marts_runner.py  06_data_quality_checks.py  06_data_quality_checks_runner.py  _job_runner_utils.py
sample_data/accounts/: accounts_batch_001.jsonl  accounts_batch_002.jsonl
sample_data/customers/: customers_batch_001.jsonl  customers_batch_002.jsonl
sample_data/fx_rates/: fx_rates_batch_001.jsonl  fx_rates_batch_002.jsonl
sample_data/transactions/: transactions_batch_001.jsonl  transactions_batch_002.jsonl
sql/: gold_daily_customer_spend.sql  gold_monthly_revenue.sql  gold_suspicious_activity_signals.sql
src/: __init__.py
src/config/: settings.py
src/schemas/: __init__.py  transactions.py
src/transformations/: __init__.py  transactions.py
tests/: test_databricks_workflow_template.py  test_orchestration.py  test_transaction_quality_flow.py  test_transformations.py  test_validations.py
(+20 files in other folders)
